--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
             if [ ! -d ".git" ]; then
               git init
-              git remote add origin git@github.com:MarkerAnn/iot-server.git
+              git remote add origin git@github.com:MarkerAnn/1dv027_IoT_server.git
               git fetch origin
               git checkout -b main origin/main
             else
